[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/wall_level_1.png" type="Texture" id=1]
[ext_resource path="res://src/base/base_lvl_1/base_lvl_1.gd" type="Script" id=2]
[ext_resource path="res://src/base/base_lvl_1/stats.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 82.4819, 67.5951 )

[node name="base_lvl_1" type="Node2D"]
script = ExtResource( 2 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -1.26134, 17.2384 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="stats" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]
